--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "babel": "^6.5.2",
     "babel-core": "^6.20.0",
     "babel-loader": "^6.2.9",
+    "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
@@ -39,5 +41,6 @@
     "luma.gl": "^2.10.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
+    
   }
 }
