--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
+    "transform-loader": "^0.2.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "deck.gl": "^3.1.1",
+    "immutable": "^3.8.1",
     "luma.gl": "^2.10.3",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
-    
+    "react-dom": "^15.4.1",
+    "react-map-gl": "^1.7.2"
   }
 }
