--- a/package.json
+++ b/package.json
@@ -18,31 +18,26 @@
     "url": "https://github.com/eltonjuan/boston/issues"
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
-  "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.26.1",
-    "file-loader": "^0.9.0",
-    "json-loader": "^0.5.4",
-    "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0",
-    "transform-loader": "^0.2.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
-  },
   "dependencies": {
-    "deck.gl": "^3.1.1",
-    "immutable": "^3.8.1",
+    "babel-polyfill": "^6.16.0",
+    "deck.gl": "^3.1.0",
     "luma.gl": "^2.10.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-map-gl": "^1.7.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "brfs": "^1.4.3",
+    "json-loader": "^0.5.4",
+    "transform-loader": "^0.2.3",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webworkify-webpack-dropin": "^1.1.9"
   }
 }
