--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "luma.gl": "^2.10.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-map-gl": "^1.7.2"
+    "react-map-gl": "^1.7.2",
+    "webgl-debug": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
