--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "mapbox-gl": "^0.28.0",
+    "rc-slider": "^5.4.0",
+    "rc-slider-hostile-fork": "^5.3.7",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
