--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --inline"
+    "dev": "webpack-dev-server --hot --inline",
+    "start": "webpack && node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "express": "^4.14.0",
     "mapbox-gl": "^0.28.0",
     "rc-slider": "^5.4.0",
     "rc-slider-hostile-fork": "^5.3.7",
