--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --hot --inline",
-    "start": "webpack && node app.js"
+    "heroku-postbuild": "webpack --progress",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
