--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-d3-basic": "^1.6.11",
     "react-dom": "^15.4.1",
     "turf": "^3.0.14",
-    "velocity-react": "^1.1.11"
+    "velocity-react": "^1.1.11",
+    "webpack": "^1.14.0"
+
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
@@ -46,7 +48,6 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
     "transform-loader": "^0.2.3",
-    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "webworkify-webpack-dropin": "^1.1.9"
   }
