lots of progress on the filters UI

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "net": "^1.0.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-select": "^1.0.0-rc.3",
     "tls": "0.0.1",
     "turf": "^3.0.14",
     "velocity-react": "^1.1.11",
