--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mapbox-gl": "^0.28.0",
     "net": "^1.0.2",
     "rc-slider": "^6.1.2",
+    "rc-slider-hostile-fork": "^5.3.7",
+    "rc-tooltip": "^3.4.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-select": "^1.0.0-rc.3",
