fixed layer highlighting

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "debounce": "^1.0.0",
     "express": "^4.14.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
+    "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^0.28.0",
     "net": "^1.0.2",
     "rc-slider": "^6.1.2",
@@ -32,6 +34,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-select": "^1.0.0-rc.3",
+    "react-tooltip": "^3.2.7",
     "tls": "0.0.1",
     "turf": "^3.0.14",
     "velocity-react": "^1.1.11",
