--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot --inline --config \"webpack.config.dev.js\"",
+    "dev": "./node_modules/.bin/concurrently \"nodemon app.js\" \"webpack-dev-server --hot --inline --config \"webpack.config.dev.js\"",
     "heroku-postbuild": "webpack --progress",
     "start": "node app.js"
   },
@@ -21,8 +21,9 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "compression": "^1.6.2",
     "debounce": "^1.0.0",
-    "express": "^4.14.0",
+    "express": "^4.15.2",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "lodash.debounce": "^4.0.8",
@@ -48,6 +49,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "brfs": "^1.4.3",
+    "concurrently": "^3.4.0",
     "css-loader": "^0.26.1",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
