--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/.bin/concurrently \"nodemon app.js\" \"webpack-dev-server --hot --inline --config \"webpack.config.dev.js\"",
+    "dev": "./node_modules/.bin/concurrently \"node app.js\" \"webpack-dev-server --hot --inline --config webpack.config.dev.js\"",
     "heroku-postbuild": "webpack --progress",
     "start": "node app.js"
   },
