ditched redux build but got internal memory working

--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
     "compression": "^1.6.2",
     "debounce": "^1.0.0",
     "express": "^4.15.2",
+    "fetch-ie8": "^1.5.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^0.28.0",
     "net": "^1.0.2",
+    "promise-polyfill": "^6.0.2",
     "rc-slider": "^6.1.2",
     "rc-slider-hostile-fork": "^5.3.7",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.3",
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.7",
+    "redux": "^3.6.0",
     "tls": "0.0.1",
     "turf": "^3.0.14",
     "velocity-react": "^1.1.11",
