--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
     "compression": "^1.6.2",
+    "custom-event-polyfill": "^0.3.0",
     "debounce": "^1.0.0",
     "express": "^4.15.2",
     "fetch-ie8": "^1.5.0",
