--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "compression": "^1.6.2",
     "custom-event-polyfill": "^0.3.0",
     "debounce": "^1.0.0",
@@ -28,15 +29,18 @@
     "fetch-ie8": "^1.5.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
+    "jspdf": "^1.3.3",
     "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^0.28.0",
     "net": "^1.0.2",
+    "pageres": "^4.4.0",
     "promise-polyfill": "^6.0.2",
     "rc-slider": "^6.3.1",
     "rc-slider-hostile-fork": "^5.3.7",
     "rc-tooltip": "^3.4.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-native-view-shot": "^1.9.1",
     "react-redux": "^5.0.3",
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.7",
@@ -44,7 +48,8 @@
     "tls": "0.0.1",
     "turf": "^3.0.14",
     "velocity-react": "^1.1.11",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webshot": "^0.18.0"
   },
   "devDependencies": {
     "babel-core": "^6.20.0",
