--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.6.2",
     "custom-event-polyfill": "^0.3.0",
     "debounce": "^1.0.0",
+    "es6-shim": "^0.35.3",
     "express": "^4.15.2",
     "fetch-ie8": "^1.5.0",
     "file-system": "^2.2.2",
