--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/eltonjuan/boston#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "child_process": "^1.0.2",
     "compression": "^1.6.2",
     "custom-event-polyfill": "^0.3.0",
@@ -45,7 +46,6 @@
     "react-redux": "^5.0.3",
     "react-select": "^1.0.0-rc.3",
     "react-tooltip": "^3.2.7",
-    "redux": "^3.6.0",
     "tls": "0.0.1",
     "turf": "^3.0.14",
     "velocity-react": "^1.1.11",
