made some prob very stupid changes to the webpack

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
-// {
-//   "extends": "airbnb",
-//   "rules": {
-//     "linebreak-style": 0,
-//     "import/prefer-default-export": 0
-//   },
-//   "globals": {
-//     "window": true,
-//     "document": true,
-//     "CustomEvent": true,
-//     "fetch": true,
-//     "Headers": true,
-//     "__DEV__": true,
-//   }
-// }
+{
+  "extends": "airbnb",
+  "rules": {
+    "linebreak-style": 0,
+    "import/prefer-default-export": 0
+  },
+  "globals": {
+    "window": true,
+    "document": true,
+    "CustomEvent": true,
+    "fetch": true,
+    "Headers": true,
+    "__DEV__": true,
+    "require": true,
+  }
+}
