--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mapbox-gl": "^0.28.0",
     "net": "^1.0.2",
     "promise-polyfill": "^6.0.2",
+    "prop-types": "^15.5.10",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.3",
