--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/ChiefKleef/basemapShowcase#readme",
   "dependencies": {
+    "@mapbox/mapbox-gl-sync-move": "^0.2.0",
     "child_process": "^1.0.2",
     "custom-event-polyfill": "^0.3.0",
     "debounce": "^1.0.0",
@@ -31,6 +32,7 @@
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "mapbox-gl": "^0.28.0",
+    "mapbox-gl-sync-move": "^0.1.0",
     "net": "^1.0.2",
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
