--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "promise-polyfill": "^6.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.4.1",
+    "react-container-dimensions": "^1.3.2",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.3",
     "react-select": "^1.0.0-rc.3",
