forgot to save all specifications

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mapbox",
     "mapboxgl"
   ],
-  "author": "",
+  "author": "Clifton Campbell, Michael Amos",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ChiefKleef/basemapShowcase/issues"
