--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fetch-ie8": "^1.5.0",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
+    "howler": "^2.0.4",
     "net": "^1.0.2",
     "object.values": "^1.0.4",
     "promise-polyfill": "^6.0.2",
